Fix timestamp clipping.

--- a/index.less
+++ b/index.less
@@ -575,8 +575,8 @@ body {
         }
 
         .song-duration {
-            margin-left: 2px;
-            margin-right: 2px;
+            margin-left: -1px;
+            margin-right: 6px;
         }
     }
 
